# Generated by Django 6.0 on 2026-01-10 10:41

import django.db.models.deletion
import uuid
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ("fleet", "0001_initial"),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name="AvailabilityBlock",
            fields=[
                ("created_at", models.DateTimeField(auto_now_add=True)),
                ("updated_at", models.DateTimeField(auto_now=True)),
                (
                    "id",
                    models.UUIDField(
                        default=uuid.uuid4,
                        editable=False,
                        primary_key=True,
                        serialize=False,
                    ),
                ),
                ("start_at_utc", models.DateTimeField()),
                ("end_at_utc", models.DateTimeField()),
                ("reason", models.CharField(blank=True, default="", max_length=255)),
                (
                    "branch",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.PROTECT,
                        related_name="availability_blocks",
                        to="fleet.branch",
                    ),
                ),
                (
                    "created_by_user",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.PROTECT,
                        related_name="created_availability_blocks",
                        to=settings.AUTH_USER_MODEL,
                    ),
                ),
                (
                    "vehicle",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.PROTECT,
                        related_name="availability_blocks",
                        to="fleet.vehicle",
                    ),
                ),
            ],
            options={
                "indexes": [
                    models.Index(
                        fields=["vehicle", "start_at_utc", "end_at_utc"],
                        name="availabilit_vehicle_e3c3e9_idx",
                    ),
                    models.Index(
                        fields=["branch", "start_at_utc", "end_at_utc"],
                        name="availabilit_branch__2c2369_idx",
                    ),
                ],
            },
        ),
    ]
